# qpc_nucleof031k6

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cubemx/: .mxproject  CMakeLists.txt  Makefile  nucleo-f031k6.ioc
cubemx/Core/Inc/: main.h
cubemx/Core/Src/: gpio.c  main.c  stm32f0xx_hal_timebase_tim.c  stm32f0xx_it.c
src/: source.c  source.h
src/test/: CMakeLists.txt
